Fixed collapse nd expend icon of taxonomy sidebar

--- a/less/_country-mixin.less
+++ b/less/_country-mixin.less
@@ -26,7 +26,7 @@
 				color: @primary;
 			}
 		}
-	} 
+	}
 
 	button,
 	a.button,
@@ -178,6 +178,10 @@
 			color: @primary;
 
 			.widgets .widget li a:hover{
+				color: @bg-color;
+			}
+
+			.widgets .widget li span:hover{
 				color: @bg-color;
 			}
 		}
